@@ -1,3 +1,9 @@
+2007-04-04  Ville Vainio  <vivainio@gmail.com>
+
+	* Extensions/ipy_completers.py, ipy_stock_completers.py:
+	Moved implementations of 'bundled' completers to ipy_completers.py,
+	they are only enabled in ipy_stock_completers.py.
+
 2007-04-04  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/PyColorize.py (Parser.format2): Fix identation of
